# toy_renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/: config.json
src/camera/: camera.cpp  camera.h  orthographic.h  perspective.h
src/io/: loader.cpp  loader.h  viewer.cpp  viewer.h
src/render/: render.cpp  render.h
src/scene/: cube.cpp  cube.h  object.cpp  object.h  scene.cpp  scene.h
src/ui/: ui_manager.cpp  ui_manager.h  viewer.cpp  viewer.h
